...

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <Button
                                android:id="@+id/name_button"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
...

                            <TextView
                                android:id="@+id/birth_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <Button
                                android:id="@+id/birth_date_button"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/color_theme_forest"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/color_theme_calmness"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/color_theme_lemonade"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/color_theme_energetic"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
...

                                <Button
                                    android:id="@+id/color_theme_button_energetic"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
...

                            <androidx.cardview.widget.CardView
                                android:id="@+id/light_mode_background"
                                android:layout_width="60dp"
                                android:layout_height="20dp"
...

                            <androidx.cardview.widget.CardView
                                android:id="@+id/dark_mode_background"
                                android:layout_width="60dp"
                                android:layout_height="20dp"
...

                            <Button
                                android:id="@+id/dark_mode_button"
                                android:layout_width="60dp"
                                android:layout_height="20dp"
...

                            <TextView
                                android:id="@+id/login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <Button
                                android:id="@+id/password_button"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
...
