<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_menu_home"
        android:icon="@drawable/bottom_menu_home_icon"
        android:title="Home" />

    <item
        android:id="@+id/bottom_menu_history"
        android:icon="@drawable/bottom_menu_history_icon"
        android:title="History" />

    <item
        android:id="@+id/bottom_menu_insights"
        android:icon="@drawable/bottom_menu_insights_icon"
        android:title="Insights" />

    <item
        android:id="@+id/bottom_menu_profile"
        android:icon="@drawable/bottom_menu_profile_icon"
        android:title="Profile" />
</menu>
