...
    tools:context=".fragments.ChangeNameFragment">

    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/change_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/change_name_title">

        <ImageView
            android:id="@+id/return_image"
            android:layout_width="20dp"
...
