<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_rate_day_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.RateDayFragment">

    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/rate_day_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rate_day_screen_title">

        <ImageView
            android:id="@+id/return_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow_left" />

        <Button
            android:id="@+id/return_home_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0" />
    </RelativeLayout>

    <TextView
        android:id="@+id/rate_day_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/app_font"
        android:text="Mood flow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/app_font"
                android:text="How was your day?"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <!-- mood 1 start -->
                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mood_1_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:src="@drawable/mood_flow_1"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/mood_1_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
                <!-- mood 1 end -->

                <!-- mood 2 start -->
                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mood_2_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:src="@drawable/mood_flow_2"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/mood_2_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
                <!-- mood 2 end -->

                <!-- mood 3 start -->
                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mood_3_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:src="@drawable/mood_flow_3"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/mood_3_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
                <!-- mood 3 end -->

                <!-- mood 4 start -->
                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mood_4_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:src="@drawable/mood_flow_4"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/mood_4_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
                <!-- mood 4 end -->

                <!-- mood 5 start -->
                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mood_5_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:src="@drawable/mood_flow_5"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/mood_5_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
                <!-- mood 5 end -->

            </LinearLayout>
            <!-- next button -->
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="1dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/button_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/app_font"
                            android:textSize="16sp"
                            android:text="Next" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0" />
            </RelativeLayout>
            <!-- next end -->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
