...
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/home_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/app_font"
        android:text="Home"
...
                                    tools:ignore="HardcodedText" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <Button
                        android:id="@+id/mood_widget_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...
