...
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.ChooseActivitiesFragment">

    <TextView
        android:id="@+id/choose_activities_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/app_font"
        android:text="Mood flow"
        android:textSize="22sp"
...
